Overflow:hidden fix for <section>

--- a/style/panoptic.css
+++ b/style/panoptic.css
@@ -161,6 +161,7 @@ h3 { font-family: 'Neuton', serif; font-size:1.4em; }
 		float:right;
 		width:73%;  /* of the page. Extra 2% whitespace between nav & section */
 		height:100%;
+		overflow:hidden;
 		padding:25px;
 		
 		background-color:#CACFF0;
